--- a/assets/css/i.css
+++ b/assets/css/i.css
@@ -528,12 +528,11 @@ header.site-header nav {
   display: inline;
   float: left;
   width: 97%;
-  margin: 0 1.5%;
   width: 100%;
   display: block;
   margin: 0 auto;
   float: none;
-  padding-top: 140px; }
+  padding-top: 0px; }
   .archive-wrap .post-list {
     width: 100%;
     list-style-type: none;
@@ -595,6 +594,7 @@ header.site-header nav {
       float: none;
       font-size: 32px;
       margin-bottom: 66px;
+      max-height: 150px;
       position: relative; }
       .archive-wrap .post-list li a {
         position: relative; }
