--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     color: #4A4A4A;
     font-size: 13px;
     background-color: #F4F1EB;
+    background-color: #FFFFFF;
 }
 
 h1,
@@ -30,8 +31,8 @@ a {
 
 ul {
 list-style-type: none;
-/*color:#999999;
-*/}
+
+}
 ul li:before {
 content: '\2014';
 position: absolute;
